<resources>
    <string name="app_name">Golf Ireland</string>
    <string name="button_addGolfPOI">ADD COURSE DETAILS</string>
    <string name="hint_golfPOITitle">Golf Course Title</string>
    <string name="hint_golfPOIDesc">Golf Course Description</string>
    <string name="menu_addGolfPOI">Add</string>
    <string name="menu_saveGolfPOI">Save</string>
    <string name="menu_cancelGolfPOI">Cancel</string>
    <string name="menu_logoutGolfPOI">Logout</string>
    <string name="menu_mapGolfPOI">Map</string>
    <string name="menu_listGolfPOI">List Course</string>
    <string name="prompt_addGolfPOI">Please enter a Title and Desc</string>
    <string name="button_saveGolfPOI">SAVE COURSE DETAILS</string>
    <string name="selected_item">Selected item:</string>
    <string name="button_addImage"> Add Course Image </string>
    <string name="select_golfPOI_image">Select Course image</string>
    <string name="change_golfPOI_image">Change Course image</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="button_switch_to_register">need to create account?</string>
    <string name="button_register">REGISTER</string>
    <string name="button_switch_to_login">already have account?</string>
    <string name="register_firstname_hint">First Name</string>
    <string name="register_lastname_hint">Last Name</string>
    <string name="button_location">Set Course Location</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Golf Ireland</string>
    <string name="nav_header_subtitle">theusersemail@gmail.com</string>
    <string name="nav_header_desc">David Corrigan</string>
    <string name="nav_user_filter_text">My Golf Courses</string>
    <string name="login_error_message">The entered email or password are invalid</string>
    <string name="register_error_message">This email address is already registered, please use another or proceed to the login screen</string>
    <string name="register_input_message">Please ensure all fields are completed before you continue</string>
    <string-array name="provinces">
        <item>Leinster</item>
        <item>Munster</item>
        <item>Connaght</item>
        <item>Ulster</item>
    </string-array>
    <string name="title_activity_golf_poimaps">GolfPOIMapsActivity</string>
    <string name="title_activity_golf_poioverview_map">GolfPOIOverviewMapActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_golfPOI_location">Change Course Location</string>
    <string name="submit">Add to Favourites</string>
    <string name="favouriteText">Favourites</string>
    <string name="google_auth_fail">Authentication Failed</string>
    <string name="distanceText">Within 50km</string>
</resources>