<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/golfPoiFragment"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/menu_addGolfPOI" />

        <item
            android:id="@+id/golfPoiListFragment"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_listGolfPOI" />


        <item
            android:id="@+id/golfPoisOverviewMapFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_mapGolfPOI" />

        <item
            android:id="@+id/golfLoginFragment"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logoutGolfPOI" />
    </group>


</menu>