<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addPOI.GolfPoiFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/golfPOITitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_golfPOITitle"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/golfPOITitle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/golfPOIDescLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/hint_golfPOIDesc"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/golfPOIDesc"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_margin="8dp"
                        android:inputType="textMultiLine"
                        android:maxLength="250"
                        android:maxLines="6"
                        android:padding="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <Spinner
                        android:id="@+id/provinceSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="5"
                        android:padding="8dp"
                        android:textSize="25sp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/golfPOIParText"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="25dp"
                        android:text="Course \nPar"
                        android:layout_weight="3"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <NumberPicker
                        android:id="@+id/golfPOIparPicker"
                        android:layout_width="match_parent"
                        android:layout_height="94dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/golfPOIParText"
                        app:layout_constraintHorizontal_bias="0.973"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.333" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnGolfPOILocation"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/change_golfPOI_location"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapViewSmall"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/btn_choose_image"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/golfPOIImage"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>